objects/Quote.object
<CustomObject>
    <fields>
        <fullName>Account_Id__c</fullName>
        <formula>Opportunity.AccountId</formula>
        <label>Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Analysis_work__c</fullName>
        <label>Analysis work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Needed_by__c</fullName>
        <label>Client Needed by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Department__c</fullName>
        <formula>Contact.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Database_work__c</fullName>
        <label>Database work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Disease_State__c</fullName>
        <formula>TEXT(Opportunity.Disease_State__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Disease State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_or_Sponsor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive or Sponsor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expressed_or_known_budget_constraints__c</fullName>
        <description>Any expressed, or known, budget constraints by the client conversation</description>
        <inlineHelpText>Any expressed, or known, budget constraints by the client conversation</inlineHelpText>
        <label>Expressed or known budget constraints</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <formula>Opportunity.Indication__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Indication</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lit_search_screening_and_report__c</fullName>
        <label>Lit search, screening and report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Literature_search_only__c</fullName>
        <label>Literature search only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>Opportunity.Id</formula>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Principal_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Principal Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_work_from_analysis__c</fullName>
        <label>Report work from analysis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Formula__c</fullName>
        <formula>TEXT(Status)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Therapeutic_Area__c</fullName>
        <formula>TEXT(Opportunity.Therapeutic_Area__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Therapeutic Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeline_or_timeline_restrictions__c</fullName>
        <description>Timeline or timeline restrictions</description>
        <label>Timeline (or timeline restrictions)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Types_o_DRE_products_used__c</fullName>
        <label>Types o DRE products used</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DOC Data</fullName>
                </value>
                <value>
                    <fullName>DOC Search</fullName>
                </value>
                <value>
                    <fullName>DOC Library</fullName>
                </value>
                <value>
                    <fullName>DOC Label</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Update_cycle_if_any__c</fullName>
        <label>Update cycle, if any</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Yearly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>